@@ -26,7 +26,7 @@
 %    You should  have received a copy  of the GNU  General Public License
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
-function [param, lnv] = stk_param_init(model, box, noisy)
+function [param, lnv] = stk_param_init (model, box, noisy)
 
 if nargin > 3,
    stk_error ('Too many input arguments.', 'TooManyInputArgs');
@@ -36,7 +36,12 @@ errmsg = 'This function must be adapted to the object-oriented approach...';
 stk_error(errmsg, 'NotReadyYet');
 
 xi = model.observations.x;
-yi = model.observations.z;
+zi = model.observations.z;
+
+if ~ isequal (size (zi), [size(xi, 1) 1]),
+    errmsg = 'zi should be a column, with the same number of rows as xi.';
+    stk_error (errmsg, 'IncorrectSize');
+end
 
 %--- first, default values for arguments 'box' and 'noisy' ---------------------
 
@@ -61,30 +66,30 @@ switch model.covariance_type
     
     case 'stk_materncov_iso'
         nu = 5/2 * size (xi, 2);
-        [param, lnv] = paraminit_ (xi, yi, box, nu, model.order, noisy);
+        [param, lnv] = paraminit_ (xi, zi, box, nu, model.order, noisy);
         
     case 'stk_materncov_aniso'
         nu = 5/2 * size (xi, 2);
         xi = stk_normalize (xi, box);
-        [param, lnv] = paraminit_ (xi, yi, [], nu, model.order, noisy);
+        [param, lnv] = paraminit_ (xi, zi, [], nu, model.order, noisy);
         param = [param(1:2); param(3) - log(diff(box, [], 1))'];
         
     case 'stk_materncov32_iso'
-        [param, lnv] = paraminit_ (xi, yi, box, 3/2, model.order, noisy);
+        [param, lnv] = paraminit_ (xi, zi, box, 3/2, model.order, noisy);
         param = [param(1); param(3)];
         
     case 'stk_materncov32_aniso'
         xi = stk_normalize (xi, box);
-        [param, lnv] = paraminit_ (xi, yi, [], 3/2, model.order, noisy);
+        [param, lnv] = paraminit_ (xi, zi, [], 3/2, model.order, noisy);
         param = [param(1); param(3) - log(diff(box, [], 1))'];
         
     case 'stk_materncov52_iso'
-        [param, lnv] = paraminit_ (xi, yi, box, 5/2, model.order, noisy);
+        [param, lnv] = paraminit_ (xi, zi, box, 5/2, model.order, noisy);
         param = [param(1); param(3)];
         
     case 'stk_materncov52_aniso'
         xi = stk_normalize (xi, box);
-        [param, lnv] = paraminit_ (xi, yi, [], 5/2, model.order, noisy);
+        [param, lnv] = paraminit_ (xi, zi, [], 5/2, model.order, noisy);
         param = [param(1); param(3) - log(diff(box, [], 1))'];
         
     otherwise
@@ -95,7 +100,7 @@ end
 end % function stk_param_init
 
 
-function [param, lnv] = paraminit_ (xi, yi, box, nu, order, noisy)
+function [param, lnv] = paraminit_ (xi, zi, box, nu, order, noisy)
 
 [ni d] = size (xi);
 
@@ -134,15 +139,15 @@ for eta = eta_list
         [K, P] = stk_make_matcov (model, xi);
         % estimate sigma2
         % (TODO: use Cholesky ?)
-        yi_ = double (yi);
-        beta = (P' * (K \ P)) \ (P' * yi_);
-        zi = yi_ - P * beta;
+        zi_ = double (zi);
+        beta = (P' * (K \ P)) \ (P' * zi_);
+        zi = zi_ - P * beta;
         sigma2 = 1 / (ni - length (beta)) * zi' * (K \ zi);
         % now compute the antilog-likelihood
         if sigma2 > 0
             model.param(1) = log (sigma2);
             model.lognoisevariance = log  (eta * sigma2);
-            aLL = stk_param_relik (model, xi, yi);
+            aLL = stk_param_relik (model, xi, zi);
             if ~isnan(aLL) && (aLL < aLL_best)
                 eta_best    = eta;
                 rho_best    = rho;
